Refactor Message Passing Structure; Complete Switch KEEP_ALIVE message

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -4,4 +4,11 @@
 /RegisterRequest.class
 /RegisterResponse.class
 /Switch.class
-/topo_3nodes.txt
+/SwitchPeriodicTask.class
+/ControllerPeriodicTask.class
+/SwitchKeepAliveThread.class
+/SwitchRouteUpdateThread.class
+/MsgRegisterRequest.class
+/MsgRegisterResponse.class
+/MsgKeepAlive.class
+/MsgTopologyUpdate.class
