Refactor the receive thread, remove individual recv() function, send/recv TOPOLOGY_UPDATE

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -12,3 +12,6 @@
 /MsgRegisterResponse.class
 /MsgKeepAlive.class
 /MsgTopologyUpdate.class
+/SwitchMsgRecvThread.class
+/ControllerMsgRecvThread.class
+/ControllerData.class
