Controller Msg receiver, peridic task, log system

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,12 +1,17 @@
 /Controller.class
 /ControllerMsgRecvThread.class
-/ControllerPeriodicTask.class
+/ControllerPeriodicTaskThread.class
 /Edge.class
 /MsgKeepAlive.class
 /MsgRegisterRequest.class
 /MsgRegisterResponse.class
 /MsgTopologyUpdate.class
 /Node.class
+/RouteUpdate.class
+/RouteUpdateToAll.class
+/RoutingStrategy.class
 /Switch.class
 /SwitchMsgRecvThread.class
 /SwitchPeriodicTask.class
+/ControllerPeriodicTask.class
+/Log.class
